src/ui/snapshots/state/default/data_loading/fetching_work_items.snap
---
source: src/ui/state/default/data_loading.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                           Merge Mode - Loading Data                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Progress──────────────────────────────────────────────────────────────────────┐"
"│███████████████████████████████      40%                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────┐"
"│                          Fetching work items (5/10)                          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│                         Loading... Press q to cancel                         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
