src/ui/snapshots/state/default/data_loading/initializing_without_local_repo.snap
---
source: src/ui/state/default/data_loading.rs
assertion_line: 1624
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                   Loading Data                                                   │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Steps─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                     1 ○ Fetch PRs  →  2 ○ Work Items  →  3 ○ Commit Info  →  4 − Dependencies                    │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Current Step──────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                                                                                  │  "
"  │                                                  Initializing...                                                 │  "
"  │                                                                                                                  │  "
"  │                                                  Please wait...                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
"                                                                                                                        "
